# Ambr

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  ed25519-donna.patch  setenv.sh
arch/mac/: platform.cc
arch/windows/: platform.h
arch/windows/openssl/Debug/lib/: libeay32.lib  ssleay32.lib
arch/windows/openssl/include/openssl/: opensslconf.h
docs/: readme.md
examples/: CMakeLists.txt  Makefile  base58.cc  base64.cc  blake2b.cc  example.cc  key.cc  leveldb.cc  makeall.sh  net_test.cc  net_test.h  sha256.cc  store_example_main_widget.cc  store_example_main_widget.cpp  store_example_main_widget.h  store_example_main_widget.ui  store_example_main_widget.ui.autosave  uint.cc  unit.cc  unit_store.cc
examples/ChatExample/: CMakeLists.txt  assist_lib.cc  assist_lib.h  main.cc  main_widget.cc  main_widget.h  main_widget.qrc  main_widget.ui
examples/rs/: errors.txt
libs/argon2/: argon2.c  argon2.h  core.c
libs/ed25519-donna/: ed25519-randombytes.h  ed25519-randombytes.h.rej
libs/rocksdb/: Makefile
src/: main.cc  p2p.tar.xz
src/core/: account.h  key.cc  key.h  node.cc  node.h  proto.h  state.h  unit.cc  unit.h
src/crypto/: base58.h  base64.h  hash.h  random.h  sha256.h
src/crypto/blake2/: blake2.h  blake2b.cc  blamka-round-ref.h
src/net/: network.h
src/p2p/: CMakeLists.txt  addrdb.cc  addrman.cc  addrman.h  bloom.cc  chainparams.cc  chainparams.h  compat.h  connmgt.cc  connmgt.h  hash.h  init.cc  init.h  net.cc  net.h  net_processing.cc  net_processing.h  netaddress.cc  netaddress.h  netbase.cc  netbase.h  netmsg.cc  netmsg.h  peer.cc  peer.h  protocol.cc  protocol.h  random.cc  random.h  scheduler.cc  timedata.cc  util.cc  utiltime.h  version.h
src/p2p/compat/: glibc_compat.cc
src/p2p/crypto/: hmac_sha256.cc  hmac_sha256.h  sha256.cc  sha256.h
src/proto/: proto.sh  unit.pb.cc  unit.pb.h  unit.pb.h.autosave  unit.proto
src/rpc/: rpc.grpc.pb.cc  rpc.grpc.pb.h  rpc.pb.cc  rpc.pb.h  rpc.proto  rpc_server.cc  rpc_server.h
src/server/: ambrd.cc  ambrd.h  server_interface.cc  server_interface.h
src/store/: db.cc  db.h  store_manager.cc  store_manager.h  unit_store.cc  unit_store.h
src/synchronization/: syn_manager.cc  syn_manager.h
src/utils/: helper.h  uint.h  validator_auto.cc  validator_auto.h
src/wallet/: wallet.h
tools/: Makefile
ut/: CMakeLists.txt  Makefile  setutenv.sh
ut/cases/: cryptotest.cc  keytest.cc  main.cc  p2p_server.cc  send_token_test.cc  store.cc  sync_test.cc  unit.cc  validator.cc
